--- a/testfile.html
+++ b/testfile.html
@@ -6,8 +6,8 @@
         <title>Intro to Web Dev!</title>
     </head>
     <body>
-        <img src={{filename}} alt="Uploaded Image" width="500" height="500">
-        <p></p>
-        <font color={{dominant_color_string}}>Picture Color - {{dominant_color_string}}</font>
+        <img src=/Users/danielwang/hack110/pictures/tennis.png alt="Uploaded Image" width="500" height="500">
+        <p>Picture Color: closest match: darkslategray</p>
     </body>
 </html>
+
